tests/compile_fail/default_private_fields_inaccessible.stderr
error[E0433]: failed to resolve: could not find `Email` in `defaultbehaviortest_fields`
  --> tests/compile_fail/default_private_fields_inaccessible.rs:16:41
   |
16 |     let _ = defaultbehaviortest_fields::Email::field_name();
   |                                         ^^^^^ could not find `Email` in `defaultbehaviortest_fields`

error[E0433]: failed to resolve: could not find `InternalId` in `defaultbehaviortest_fields`
  --> tests/compile_fail/default_private_fields_inaccessible.rs:17:41
   |
17 |     let _ = defaultbehaviortest_fields::InternalId::field_name();
   |                                         ^^^^^^^^^^ could not find `InternalId` in `defaultbehaviortest_fields`
